creusot/tests/should_fail/prusti/deref/make_ref.stderr
error[creusot]: invalid reference creation of expression with home `'old` at time-slice `'curr`
  --> make_ref.rs:14:20
   |
14 | #[ensures({let x = x.mk_ref(); x.0 == result})]
   |                    ^

error: aborting due to previous error

